--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../../../Applications/android-sdk-macosx/extras/android/support/v7/appcompat
-android.library.reference.2=../../../../Applications/android-sdk-macosx/extras/android/support/v7/recyclerview
+android.library.reference.1=../../../eclipse/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../../../eclipse/sdk/extras/android/support/v7/recyclerview
