--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="libs/svg-android.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/svg-android.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
